home page has stuff now?

--- a/learning_journal/templates/list.jinja2
+++ b/learning_journal/templates/list.jinja2
@@ -4,7 +4,7 @@
 
       <div class="starter-template">
         <h1 class="pages-title">Learning Journal</h1>
-        <p class="lead">Claire Gatenby's learning journal submissions for Codefellows Python 401</p>
+        <p class="lead">Patrick Saunders' learning journal submissions for Codefellows Python 401</p>
       </div>
 
     </div><!-- /.container -->
