--- a/learning_journal/templates/layout.jinja2
+++ b/learning_journal/templates/layout.jinja2
@@ -1,52 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<html>
+<head>
+    <title>{% block title %}default_title{% endblock %}</title>
+    <!-- includse css file via href, also needs the config.add_static_view entry in __init__ -->
+    <!-- The same technique can be used to link javascript files iin the end of the body -->
+</head>
+<body>
+{% block body %}{% endblock %}
 
-    <link href='https://fonts.googleapis.com/css?family=Sansita+One|Kameron' rel='stylesheet' type='text/css'>
-    <!-- Bootstrap core CSS -->
-    <link href="{{ request.static_path('learning_journal_basic:static/bootstrap-3.3.7-dist/css/bootstrap.min.css') }}" rel="stylesheet">
-    <link href="{{ request.static_path('learning_journal_basic:static/style.css') }}" rel="stylesheet">
-
-    <title>Claire's Learning Journal</title>
-  </head>
-
-  <body>
-
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="{{ request.route_url('home') }}">Claire's Learning Journal</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="{{ request.route_url('home') }}">Home</a></li>
-            <li><a href="{{ request.route_url('new') }}">Add New Entry</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
+    <nav>
+        <button>
+        <a href="{{
+        request.route_url('home') }}">To The Home Page</a>
+        </button>
     </nav>
-
-
-    {% block body %}{% endblock %}
-
-
-
-    <footer class="footinfo">Claire's Learning Journal ~ Python 401
-    </footer>
-
-    <!-- Bootstrap stuff
-    ================================================== -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
-
-  </body>
+</body>
 </html>
