added new entry button for nav

--- a/learning_journal/templates/layout.jinja2
+++ b/learning_journal/templates/layout.jinja2
@@ -13,6 +13,10 @@
         <a href="{{
         request.route_url('home') }}">To The Home Page</a>
         </button>
+         <button>
+        <a href="{{
+        request.route_url('new') }}">Add a new entry</a>
+        </button>
     </nav>
 </body>
 </html>
