--- a/learning_journal/templates/new.jinja2
+++ b/learning_journal/templates/new.jinja2
@@ -9,12 +9,12 @@
     </div><!-- /.container -->
 
       <section class="form">
-        <form>
+        <form action="{{ request.route_url('new') }}" method="POST">
           <div class="form-group">
             <h2>Title</h2>
             <input type="text" class="form-control" name="title" value="Entry Title">
             <h2>What did you learn today...</h2>
-            <textarea name="entry" class="form-control">Type here!</textarea>
+            <textarea name="body" class="form-control">Type here!</textarea>
             <button type="submit" class="btn btn-primary">Submit</button>
           </div>
         </form>
