--- a/learning_journal/templates/list.jinja2
+++ b/learning_journal/templates/list.jinja2
@@ -14,7 +14,7 @@
         <h2 class="entrytitle">
           <a href="{{ request.route_url('detail', id=item.id) }}">{{ item.title }}</a>
         </h2>
-          <p class="date">{{ item.creation_date }}</p>
+          <p class="date">{{ item.creation_date.strftime('%b %d, %Y') }}</p>
       </article>
     </section>
     {% endfor %}
