--- a/learning_journal/templates/edit.jinja2
+++ b/learning_journal/templates/edit.jinja2
@@ -18,4 +18,5 @@
             <button type="submit" class="btn btn-primary">Submit</button>
           </div>
         </form>
+        </section>
 {% endblock %}
