--- a/learning_journal/templates/new.jinja2
+++ b/learning_journal/templates/new.jinja2
@@ -10,13 +10,14 @@
 
       <section class="form">
         <form action="{{ request.route_url('new') }}" method="POST">
-          <div class="form-group">
-            <h2>Title</h2>
-            <input type="text" class="form-control" name="title" value="Entry Title">
-            <h2>What did you learn today...</h2>
-            <textarea name="body" class="form-control">Type here!</textarea>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </div>
+          <input type="hidden" name="csrf_token" value="{{ request.session.get_csrf_token() }}" />
+            <div class="form-group">
+              <h2>Title</h2>
+              <input type="text" class="form-control" name="title" value="Entry Title">
+              <h2>What did you learn today...</h2>
+              <textarea name="body" class="form-control">Type here!</textarea>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
         </form>
       </section>
 
