app.js edited, model and default first pass

--- a/learning_journal/templates/layout.jinja2
+++ b/learning_journal/templates/layout.jinja2
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script><script type="text/javascript"></script>
+
     <title>{% block title %}default_title{% endblock %}</title>
     <!-- includse css file via href, also needs the config.add_static_view entry in __init__ -->
     <!-- The same technique can be used to link javascript files iin the end of the body -->
