getting ajax working

--- a/learning_journal/templates/layout.jinja2
+++ b/learning_journal/templates/layout.jinja2
@@ -20,4 +20,5 @@
         {% endif %}
     </nav>
 </body>
+<script type="text/javascript" src="{{ request.static_url('learning_journal:static/app.js') }}"></script>
 </html>
