--- a/learning_journal/templates/list.jinja2
+++ b/learning_journal/templates/list.jinja2
@@ -8,6 +8,18 @@
       </div>
 
     </div><!-- /.container -->
+    <section class="form">
+      <form action="{{ request.route_url('new') }}" method="POST">
+        <input type="hidden" name="csrf_token" class="security" value="{{ request.session.get_csrf_token() }}" />
+          <div class="form-group">
+            <h2>Title</h2>
+            <input type="text" class="form-control" name="title" value="Entry Title">
+            <h2>What did you learn today...</h2>
+            <textarea name="body" class="form-control">Type here!</textarea>
+            <button type="submit" class="form_add btn btn-primary">Submit</button>
+          </div>
+      </form>
+    </section>
     {% for item in entries %}
     <section>
       <article>
